quickly fix a super annoying bug where links are the wrong color

--- a/frontend/src/components/header-views/header-content-maus/_header-content-maus.scss
+++ b/frontend/src/components/header-views/header-content-maus/_header-content-maus.scss
@@ -58,7 +58,7 @@
     }
   }
 
-  .mau-history-link {
+  .mau-history-link, .mau-history-link:not(.btn) {
     flex-shrink: 0;
     flex-grow: 0;
     text-transform: uppercase;
